--- a/src/pages/items/items.scss
+++ b/src/pages/items/items.scss
@@ -25,12 +25,20 @@ page-items {
         color: #fff;
     }
 
+    .card-distance {
+        font-size: 1.0em;
+        position: absolute;
+        top: 105px;
+        width: 100%;
+        color: #fff;
+    }
+
     .info {
         background-color: black;
         position: absolute;
         top: 45px;
         width: 100%;
-        height: 70px;
+        height: 90px;
         opacity: 0.5;
     }
 
