--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,7 +1,7 @@
 page-map {
-    .scroll {
-        height: 100%
-      }
+    // .scroll {
+    //     height: 100%
+    //   }
  
       #map {
         width: 100%;
