commit-21: linh tinh - format date and time correctly - native google maps but not successful - format comment look nicer

--- a/src/pages/show-item-detail/show-item-detail.scss
+++ b/src/pages/show-item-detail/show-item-detail.scss
@@ -1,3 +1,14 @@
 page-show-item-detail {
+    .comment{
+        color: grey;
+        text-align: left;
+    }
 
+    .time{
+        font-style: italic;
+        font-size: 11px;
+        text-align: right;  
+        color: gray;
+
+    }
 }
