--- a/src/pages/camera-browser/camera-browser.scss
+++ b/src/pages/camera-browser/camera-browser.scss
@@ -1,3 +1,31 @@
 page-camera-browser {
+    .fileContainer {
+        overflow: hidden;
+        position: relative;
+    }
 
+    .fileContainer [type=file] {
+        cursor: inherit;
+        display: block;
+        font-size: 999px;
+        filter: alpha(opacity=0);
+        min-height: 100%;
+        min-width: 100%;
+        opacity: 0;
+        position: absolute;
+        right: 0;
+        text-align: right;
+        top: 0;
+    }
+
+    // .fileContainer {
+    //     background: #0fc1ac;
+    //     border-radius: .5em;
+    //     float: left;
+    //     padding: .5em;
+    // }
+
+    // .fileContainer [type=file] {
+    //     cursor: pointer;
+    // }
 }
