--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -17,4 +17,34 @@ page-add-item {
     ion-input .ng-invalid { 
     border-left: 2px solid red;
 }
+
+    .fileContainer {
+        overflow: hidden;
+        position: relative;
+    }
+
+    .fileContainer [type=file] {
+        cursor: inherit;
+        display: block;
+        font-size: 999px;
+        filter: alpha(opacity=0);
+        min-height: 100%;
+        min-width: 100%;
+        opacity: 0;
+        position: absolute;
+        right: 0;
+        text-align: right;
+        top: 0;
+    }
+
+    // .fileContainer {
+    //     background: #0fc1ac;
+    //     border-radius: .5em;
+    //     float: left;
+    //     padding: .5em;
+    // }
+
+    // .fileContainer [type=file] {
+    //     cursor: pointer;
+    // }
 }
