--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" (ionOpen)="ionOpen()">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -6,6 +6,14 @@
   </ion-header>
 
   <ion-content>
+    <div *ngIf="userAvatar!=null">
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="{{userAvatar}}">
+        </ion-avatar>
+        <h2>{{userName}}</h2>
+      </ion-item>
+    </div>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
